--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "jest",
-    "start": "node server.js"
+    "start": "nodemon ./server.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,19 @@
   },
   "homepage": "https://github.com/fullstakreaktor/Adam-Proxy#readme",
   "devDependencies": {
+    "body-parser": "^1.18.3",
     "grunt": "^1.0.3",
-    "grunt-contrib-uglify": "^3.4.0"
+    "grunt-connect-proxy": "^0.2.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-uglify": "^3.4.0",
+    "path": "^0.12.7",
+    "react-css-modules": "^4.7.4"
+  },
+  "dependencies": {
+    "express": "^4.16.3",
+    "morgan": "^1.9.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
   }
 }
